# VTFLib

./: .gitignore  CMakeLists.txt  Doxyfile.in  Error_8h.html  Error_8h_source.html  FileReader_8h_source.html  FileWriter_8h_source.html  Float16_8h_source.html  MemoryReader_8h_source.html  MemoryWriter_8h_source.html  ProcReader_8h_source.html  ProcWriter_8h_source.html  Proc_8h_source.html  README.md  Reader_8h_source.html  Readers_8h_source.html  VMTFile_8h_source.html  VMTGroupNode_8h_source.html  VMTIntegerNode_8h_source.html  VMTNode_8h_source.html  VMTNodes_8h_source.html  VMTSingleNode_8h_source.html  VMTStringNode_8h_source.html  VMTValueNode_8h_source.html  VMTWrapper_8h_source.html  VTFDXTn_8h_source.html  VTFFile_8h.html  VTFFile_8h_source.html  VTFFormat_8h.html  VTFFormat_8h_source.html  VTFLib.pc.in  VTFLib_8h.html  VTFLib_8h_source.html  VTFMathlib_8h.html  VTFMathlib_8h_source.html  VTFWrapper_8h_source.html  Writer_8h_source.html  Writers_8h_source.html  annotated.html  classVTFLib_1_1CVTFFile.html  (+34 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_16.js  all_2.js  all_3.js  all_4.js  all_7.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  search.js  typedefs_0.js  variables_1.js  variables_10.js  (+15 more)
src/: CMakeLists.txt  Error.cpp  Error.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Float16.h  MemoryReader.cpp  MemoryReader.h  MemoryWriter.cpp  MemoryWriter.h  Proc.cpp  Proc.h  ProcReader.cpp  ProcReader.h  ProcWriter.cpp  ProcWriter.h  Reader.h  Resource.rc  Resource.rc.in  VMTFile.cpp  VMTFile.h  VMTGroupNode.cpp  VMTGroupNode.h  VMTIntegerNode.cpp  VMTIntegerNode.h  VMTNode.cpp  VMTNode.h  VMTNodes.h  VMTSingleNode.cpp  VMTSingleNode.h  VMTStringNode.cpp  VMTStringNode.h  VMTValueNode.h  VMTWrapper.cpp  VMTWrapper.h  VTFDXTn.h  VTFFile.cpp  VTFFile.h  (+9 more)
src/generic/: CMakeLists.txt  Error.cpp  FileReader.cpp  FileWriter.cpp
src/unix/: CMakeLists.txt  Error.cpp  FileReader.cpp  FileWriter.cpp  VTFLib.cpp
src/windows/: Error.cpp  FileReader.cpp  FileWriter.cpp  VTFLib.cpp
